# h5-entertainment-platform

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  DEPLOY.md  DEVIN_PROMPT.md  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  postcss.config.js  sk-productization-acceptance.md  vite.config.js
.github/workflows/: ci.yml
admin/: index.html  package-lock.json  package.json  vite.config.js
admin-server/: .env.example  db.js  h5-routes.js  package-lock.json  package.json  pp-integration.js  pp-routes.js  seed.js  server.js  validation.js
admin-server/docs/: sk7755-api-spec.md  sk7755-db-migration.sql
admin-server/providers/: IProvider.js  registry.js
admin-server/services/: rakebackScheduler.js
admin/src/: main.js
deploy/: nginx.conf
h5-backend/: pyproject.toml  requirements.txt
h5-backend/app/: auth.py  database.py  main.py  models.py  seed.py
h5-backend/app/routers/: auth.py  bets.py  games.py  promotions.py  users.py  wallet.py
h5-backend/app/routers/admin/: agents.py  dashboard.py  finance.py  games.py  members.py  risk.py  system.py
public/: manifest.json  service-worker.js
scripts/: migrate-sk7755-categories.js
src/: App.vue  main.js
src/api/: app.js  auth.js  game.js  promo.js  user.js  wallet.js
src/i18n/: en.js  index.js  zh-CN.js  zh.js
src/mock/: index.js
src/router/: index.js
src/stores/: app.js  game.js  notification.js  user.js  wallet.js
src/styles/: _variables.scss  global.scss  tokens.css
src/utils/: recentBrowsing.js  request.js
src/views/: ActivitiesPage.vue  (+41 more)
(+112 files in other folders)
