[tool.poetry]
name = "h5-backend"
version = "0.1.0"
description = "H5 Entertainment Platform Backend"
authors = ["dev"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.135.2"}
uvicorn = {extras = ["standard"], version = "^0.30.0"}
aiosqlite = "^0.20.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "<4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
